experiments/aws/001-k8s-container-orchestration/application/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-experiment
  labels:
    name: k8s-experiment
    environment: development
    experiment: container-orchestration
